crates/facet-styx/src/snapshots/facet_styx__tag_events_test__04_tag_sequence.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo(a b)\")"
---
FieldKey(Some("x"))
VariantTag("Foo")
SequenceStart
Error: ParseError { span: Span { offset: 10, len: 1 }, kind: UnexpectedToken { got: "unexpected token", expected: "valid syntax" } }
