crates/facet-styx/src/snapshots/facet_styx__tag_events_test__06_nested_unit_tags.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo(@Bar)\")"
---
FieldKey(Some("x"))
VariantTag("Foo")
SequenceStart
Error: ParseError { span: Span { offset: 11, len: 1 }, kind: UnexpectedToken { got: "unexpected token", expected: "valid syntax" } }
