crates/facet-styx/src/snapshots/facet_styx__tag_events_test__07_tag_struct_with_tag_value.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"y @Foo{x @Bar}\")"
---
FieldKey(Some("y"))
VariantTag("Foo")
StructStart
StructEnd
Error: ParseError { span: Span { offset: 7, len: 1 }, kind: UnexpectedToken { got: "unexpected atom after value (entry has too many atoms)", expected: "valid syntax" } }
