crates/facet-styx/src/snapshots/facet_styx__tag_events_test__09_field_struct_tag.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo{y 1}\")"
---
FieldKey(Some("x"))
VariantTag("Foo")
StructStart
StructEnd
Error: ParseError { span: Span { offset: 7, len: 1 }, kind: UnexpectedToken { got: "unexpected atom after value (entry has too many atoms)", expected: "valid syntax" } }
