crates/facet-styx/src/snapshots/facet_styx__tag_events_test__10_sequence_unit_tags.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x (@Foo @Bar)\")"
---
FieldKey(Some("x"))
SequenceStart
  VariantTag("Foo")
  Scalar(Unit)
Error: ParseError { span: Span { offset: 8, len: 1 }, kind: UnexpectedToken { got: "unexpected atom after value (entry has too many atoms)", expected: "valid syntax" } }
