crates/facet-styx/src/snapshots/facet_styx__tag_events_test__11_deeply_nested.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"y @Foo(@Bar{x 1})\")"
---
FieldKey(Some("y"))
VariantTag("Foo")
SequenceStart
Error: ParseError { span: Span { offset: 16, len: 1 }, kind: UnexpectedToken { got: "unexpected token", expected: "valid syntax" } }
